openshift/capfile-3-ckan.yaml

apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ckan
  name: ckan
spec:
  replicas: 1
  selector:
    io.kompose.service: ckan
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/ckan-docker-ga-default: "true"
        io.kompose.service: ckan
    spec:
      containers:
        - env:
            - name: CKAN_CONTAINER_NAME
              value: ckan
            - name: CKAN_DATAPUSHER_URL
              value: http://datapusher:8800
            - name: CKAN_DATASTORE_READ_URL
              value: postgresql://datastore_ro:datastore@db/datastore
            - name: CKAN_DATASTORE_WRITE_URL
              value: postgresql://ckan:ckan@db/datastore
            - name: CKAN_PORT
              value: "5000"
            - name: CKAN_PORT_HOST
              value: "5000"
            - name: CKAN_REDIS_URL
              value: redis://redis:6379/1
            - name: CKAN_SITE_ID
              value: default
            - name: CKAN_SITE_URL
              value: http://ckan-route-udpkatalog-dev.apps.capk.muenchen.de
            - name: CKAN_SMTP_MAIL_FROM
              value: ckan@localhost
            - name: CKAN_SMTP_PASSWORD
              value: pass
            - name: CKAN_SMTP_SERVER
              value: smtp.corporateict.domain:25
            - name: CKAN_SMTP_STARTTLS
              value: "True"
            - name: CKAN_SMTP_USER
              value: user
            - name: CKAN_SOLR_URL
              value: http://solr:8983/solr/ckan
            - name: CKAN_SQLALCHEMY_URL
              value: postgresql://ckan:ckan@db/ckan
            - name: CKAN_STORAGE_PATH
              value: /var/lib/ckan
            - name: CKAN_SYSADMIN_EMAIL
              value: your_email@example.com
            - name: CKAN_SYSADMIN_NAME
              value: ckan_admin
            - name: CKAN_SYSADMIN_PASSWORD
              value: test1234
            - name: CKAN_VERSION
              value: 2.10.0
            - name: CKAN__DATAPUSHER__CALLBACK_URL_BASE
              value: http://ckan:5000
            - name: CKAN__HARVEST__MQ__HOSTNAME
              value: redis
            - name: CKAN__HARVEST__MQ__PORT
              value: "6379"
            - name: CKAN__HARVEST__MQ__REDIS_DB
              value: "1"
            - name: CKAN__HARVEST__MQ__TYPE
              value: redis
            - name: CKAN__PLUGINS
              value: envvars image_view text_view recline_view datastore
            - name: CKAN___API_TOKEN__JWT__DECODE__SECRET
              value: string:CHANGE_ME
            - name: CKAN___API_TOKEN__JWT__ENCODE__SECRET
              value: string:CHANGE_ME
            - name: CKAN___BEAKER__SESSION__SECRET
              value: CHANGE_ME
            - name: DATAPUSHER_CONTAINER_NAME
              value: datapusher
            - name: DATAPUSHER_REWRITE_RESOURCES
              value: "True"
            - name: DATAPUSHER_REWRITE_URL
              value: http://ckan:5000
            - name: DATAPUSHER_VERSION
              value: 0.0.20
            - name: DATASTORE_READONLY_PASSWORD
              value: datastore
            - name: DATASTORE_READONLY_USER
              value: datastore_ro
            - name: NGINX_CONTAINER_NAME
              value: nginx
            - name: NGINX_PORT
              value: "1080"
            - name: NGINX_PORT_HOST
              value: "81"
            - name: NGINX_SSLPORT
              value: "1443"
            - name: NGINX_SSLPORT_HOST
              value: "8443"
            - name: POSTGRESQL_CONTAINER_NAME
              value: db
            - name: POSTGRES_HOST
              value: db
            - name: POSTGRES_PASSWORD
              value: ckan
            - name: POSTGRES_USER
              value: ckan
            - name: REDIS_CONTAINER_NAME
              value: redis
            - name: REDIS_VERSION
              value: "6"
            - name: SOLR_CONTAINER_NAME
              value: solr
            - name: SOLR_IMAGE_VERSION
              value: 2.10-spatial
            - name: TEST_CKAN_DATASTORE_READ_URL
              value: postgresql://datastore_ro:datastore@db/datastore_test
            - name: TEST_CKAN_DATASTORE_WRITE_URL
              value: postgresql://ckan:ckan@db/datastore_test
            - name: TEST_CKAN_REDIS_URL
              value: redis://redis:6379/1
            - name: TEST_CKAN_SOLR_URL
              value: http://solr:8983/solr/ckan
            - name: TEST_CKAN_SQLALCHEMY_URL
              value: postgres://ckan:ckan@db/ckan_test
            - name: TZ
              value: UTC
            - name: WORKER_CONTAINER_NAME
              value: ckan-worker
          image: ' '
          name: ckan
          ports:
            - containerPort: 5000
              hostIP: 0.0.0.0
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/ckan
              name: ckan-storage
      restartPolicy: Always
      volumes:
        - name: ckan-storage
          emptyDir: {}
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - ckan
        from:
          kind: ImageStreamTag
          name: ckan:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ckan
  name: ckan
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: ckan
status:
  loadBalancer: {}

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ckan-route
  namespace: udpkatalog-dev
  labels:
    io.kompose.service: ckan
spec:
  host: ckan-route-udpkatalog-dev.apps.capk.muenchen.de
  to:
    kind: Service
    name: ckan
  port:
    targetPort: '5000'
---
